# fb-messenger-to-telegram

./: .gitignore  README.md  configuration-template.toml  main.py  messenger.py  pyproject.toml  sender.py  telegram.py
